tests/errors/fixed_array_reserve.orus
fn main() {
    let arr = [1, 2, 3]
    reserve(arr, 10)
}
